syntax = "proto3";
package assets_inventory;

option go_package = "go.easyops.local/contracts/protorepo-models/easyops/model/assets_inventory";





/*
机房
*/
message InventoryIDC {
    /*
    机房ID
    */
    string instanceId = 1 ;
    /*
    机房名称
    */
    string name = 2 ;
    /*
    楼层号
    */
    string building = 3 ;
    /*
    简称
    */
    string short_name = 4 ;
    /*
    值班电话
    */
    string telphone = 5 ;
    /*
    区域，如1F01
    */
    string area = 6 ;
    /*
    机房地址，如华北机房
    */
    string address = 7 ;
    /*
    机房状态
    */
    string status = 8 ;
    /*
    机房布局，用json保存二维数组[[{instanceId, type, code}]]
    */
    string layout = 9 ;
    /*
    机房创建时间
    */
    string ctime = 10 ;
    /*
    机房创建者
    */
    string creator = 11 ;
}

